--- a/influxdb/influxdb.conf
+++ b/influxdb/influxdb.conf
@@ -335,9 +335,10 @@
 ###
 
 [[collectd]]
-  # enabled = false
-  # bind-address = ":25826"
-  # database = "collectd"
+  enabled = true
+  bind-address = ":25826"
+  database = "collectd_db"
+  typesdb =  "/etc/collectd/types.db"
   # retention-policy = ""
   #
   # The collectd service supports either scanning a directory for multiple types
